force-app/main/default/objects/Game_Session__c/Game_Session__c.object-meta.xml
<CustomObject>
    <description>An instance of a trivia game in Slack.</description>
    <label>Game Session</label>
    <nameField>
        <label>Game Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>