force-app/main/default/objects/Game_Session__c/fields/Anti_Cheat_Seed__c.field-meta.xml
<CustomField>
    <fullName>Anti_Cheat_Seed__c</fullName>
    <label>Anti Cheat Seed</label>
    <type>Text</type>
    <length>64</length>
</CustomField>