force-app/main/default/objects/Game_Session__c/fields/Current_Question_Index__c.field-meta.xml
<CustomField>
    <fullName>Current_Question_Index__c</fullName>
    <label>Current Question Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>