force-app/main/default/objects/Game_Session__c/fields/Duel_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Duel_Group_Id__c</fullName>
    <externalId>true</externalId>
    <label>Duel Group Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>