force-app/main/default/objects/Game_Session__c/fields/Duel_Opponent_Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Duel_Opponent_Slack_User_Id__c</fullName>
    <label>Duel Opponent Slack User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>