force-app/main/default/objects/Game_Session__c/fields/Duel_Origin_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Duel_Origin_Channel_Id__c</fullName>
    <label>Duel Origin Channel Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>