force-app/main/default/objects/Game_Session__c/fields/Duel_Role__c.field-meta.xml
<CustomField>
    <fullName>Duel_Role__c</fullName>
    <label>Duel Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Challenger</fullName>
            </value>
            <value>
                <fullName>Opponent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>