force-app/main/default/objects/Game_Session__c/fields/Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Id__c</fullName>
    <label>Slack Channel Id</label>
    <type>Text</type>
    <length>40</length>
    <length>40</length>
</CustomField>