force-app/main/default/objects/Game_Session__c/fields/Started_By_Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Started_By_Slack_User_Id__c</fullName>
    <label>Started By Slack User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>