force-app/main/default/objects/Game_Session__c/fields/Timer_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timer_Seconds__c</fullName>
    <label>Timer Seconds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>