force-app/main/default/objects/Game_Session__c/fields/Total_Questions__c.field-meta.xml
<CustomField>
    <fullName>Total_Questions__c</fullName>
    <label>Total Questions</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>